--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,6 @@
 {
-  "extends": "./node_modules/js-styleguide/.eslintrc"
+  "extends": "./node_modules/js-styleguide/.eslintrc",
+  "rules": {
+    "no-magic-numbers": 0
+  }
 }
