--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2
 
 jobs:
-    build:
+    test:
         machine: true
+        steps: 
+            - checkout
+            - run npm test
