--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,20 @@
 version: 2
 
 jobs:
-    build:
-        machine: true
-        steps:
-    test:
-        machine: true
-        steps: 
-            - checkout
-            - run npm test
+  build:
+    machine: true
+    steps:
+      - checkout
+      - run: npm build
+  test:
+    machine: true
+    steps: 
+      - checkout
+      - run: npm test
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test
