--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
     steps: 
       - checkout
       - run: npm install
-      - run: npm test
+      - run: npm test && npm lint
 
 workflows:
   version: 2
