Migrate to CircleCI 2.0 (#26)
* Update config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,1 +1,21 @@
 version: 2
+
+jobs:
+  build:
+    machine: true
+    steps:
+      - checkout
+      - run: npm install
+  test:
+    machine: true
+    steps: 
+      - checkout
+      - run: npm install
+      - run: npm test
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test
