--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
-  "extends": "./node_modules/js-styleguide/.eslintrc",
-  "rules": {
-    "no-magic-numbers": 0
-  }
+    "extends": "prettier-eslint",
+    "rules": {
+        "no-magic-numbers": 0
+    }
 }
