--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     },
     "devDependencies": {
         "eslint": "^5.2.0",
+        "eslint-config-kentcdodds": "^14.0.0",
         "jasmine-node": "^2.0.1",
-        "prettier": "^1.14.0",
-        "prettier-eslint": "^8.8.2"
+        "prettier": "^1.14.0"
     },
     "dependencies": {
         "gulp": "^3.9.1",
