--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     },
     "scripts": {
         "lint": "eslint ./lib -c ./.eslintrc",
-        "test": "./node_modules/.bin/jasmine-node test/spec"
+        "test": "./node_modules/.bin/jasmine-node test/spec",
+        "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,css,less,md,json}'",
+        "prettier-check": "prettier --list-different '**/*.{js,jsx,ts,tsx,css,less,md,json}'"
     },
     "keywords": [
         "gulpplugin",
@@ -27,8 +29,9 @@
     },
     "devDependencies": {
         "eslint": "^5.2.0",
+        "eslint-config-kentcdodds": "^14.0.0",
         "jasmine-node": "^2.0.1",
-        "js-styleguide": "git://github.com/klaascuvelier/js-styleguide.git#master"
+        "prettier": "^1.14.0"
     },
     "dependencies": {
         "gulp": "^3.9.1",
