--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "devDependencies": {
         "eslint-config-kentcdodds": "^21.0.0",
         "jest": "29.7.0",
-        "prettier": "^1.14.0"
+        "prettier": "^1.14.0",
+        "gulp": "^5.0.0"
     },
     "dependencies": {
-        "gulp": "^5.0.0",
         "plugin-error": "^2.0.1",
         "through2": "^2.0.3"
     },
