--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
         "plugin-error": "^2.0.1",
         "through2": "^2.0.3"
     },
+    "peerDependencies": {
+        "gulp": "^4.0.1 || ^5.0.0"
+    },
     "homepage": "https://github.com/klaascuvelier/gulp-copy"
 }
