--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "gulp-copy",
-    "version": "4.0.1",
+    "version": "5.0.0",
     "description": "Plugin copying files to a new destination and using that destination for other actions",
     "main": "index.js",
     "repository": {
@@ -9,7 +9,7 @@
     },
     "scripts": {
         "lint": "eslint ./lib -c ./.eslintrc",
-        "test": "./node_modules/.bin/jasmine-node test/spec",
+        "test": "jest test/spec",
         "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,css,less,md,json}'",
         "prettier-check": "prettier --list-different '**/*.{js,jsx,ts,tsx,css,less,md,json}'"
     },
@@ -28,15 +28,17 @@
         "url": "https://github.com/klaascuvelier/gulp-copy/issues"
     },
     "devDependencies": {
-        "eslint": "^5.2.0",
-        "eslint-config-kentcdodds": "^14.0.0",
-        "jasmine-node": "^2.0.1",
-        "prettier": "^1.14.0"
+        "eslint-config-kentcdodds": "^21.0.0",
+        "jest": "29.7.0",
+        "prettier": "^1.14.0",
+        "gulp": "^5.0.0"
     },
     "dependencies": {
-        "gulp": "^4.0.0",
-        "plugin-error": "^0.1.2",
+        "plugin-error": "^2.0.1",
         "through2": "^2.0.3"
+    },
+    "peerDependencies": {
+        "gulp": "^4.0.1 || ^5.0.0"
     },
     "homepage": "https://github.com/klaascuvelier/gulp-copy"
 }
